<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>by.moiseenko</groupId>
  <artifactId>LearningPatterns</artifactId>
  <version>1.0-SNAPSHOT</version>

  <name>Learning Patterns</name>
  <description>How I Taught Patterns of GOF</description>
  <url>https://github.com/SMoiseenko</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <mcp.version>3.8.1</mcp.version>
    <log4j.version>2.13.0</log4j.version>
    <java.version>13</java.version>

  </properties>

  <dependencies>
  <dependency>
    <groupId>org.apache.logging.log4j</groupId>
    <artifactId>log4j-core</artifactId>
    <version>${log4j.version}</version>
  </dependency>
  </dependencies>

  <build>
  <plugins>
  <plugin>
    <artifactId>maven-compiler-plugin</artifactId>
    <version>${mcp.version}</version>
    <configuration>
      <release>${java.version}</release>
      <compilerArgs>--enable-preview</compilerArgs>
      <source>${java.version}</source>
      <target>${java.version}</target>
    </configuration>
  </plugin>
  </plugins>
  </build>

</project>